service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: game-2048
spec:
  type: NodePort
  selector:
    app: gaming
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
      protocol: TCP
